Improvements in: - Add Inserts in migrations to login master user - Improved in Create users - Changed shutdown to grace shutdown
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   cmd/go_api/main.go
	modified:   docs/docs.go
	modified:   docs/swagger.json
	modified:   docs/swagger.yaml
	modified:   internal/domain/models/base_model.go
	modified:   internal/domain/models/user_model.go
	modified:   internal/handlers_v1/auth_handle.go
	modified:   internal/handlers_v1/users_handle.go
	modified:   internal/services/users_service.go
	modified:   migrations/0001_20240406191129_create_tenants_table.up.sql
	modified:   migrations/0002_20240501114526_create_users_table.up.sql
	modified:   migrations/0005_20240501140948_create_security_tables.up.sql
	modified:   migrations/0006_20240509144110_create_casbin_rules_view.up.sql
